--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! This is jay's webapp.
-            i will rock web
+            i will rock webapp
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
