--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="https://pbs.twimg.com/profile_images/889741293965811712/mS8UzsdA_400x400.jpg" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! This is jay's webapp.
-            i will rock webapp
+        <div class="container">
+            <div class="center">
+               <img src="https://pbs.twimg.com/profile_images/889741293965811712/mS8UzsdA_400x400.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3>personal</h3>
+            <div>
+                Hi My name is Jayakrishna Bairapu
+            </div>
+            <hr/>
+            <h3>professional</h3>
+            <div>
+                I am a Database Specialist
+            </div>
+            <hr/>
+            <div class="footer">
+                
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
